<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name" translatable="false">1Sheeld</string>
    <string name="action_settings">Clear Automatically Connecting 1Sheeld</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_for_bluetooth">Search for bluetooth devices</string>
    <string name="disconnect_device">Disconnect 1Sheeld</string>
    <string name="go_to_shields_operation">Operate the shields</string>
    <string name="about">About</string>

    <!-- MainActivity -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_activity_shields_operation">Shields</string>

    <!-- Name of the plug-in that appears in Locale -->
    <string name="plugin_name">1Sheeld</string>
    <!-- Hint text in the toast edit text -->
    <string name="message_hint">Scheduled Output</string>
    <string name="login_to_twitter">Login to Twitter</string>
    <string name="logout_from_twitter">Logout from Twitter</string>
    <string name="login_to_facebook">Login to Facebook</string>
    <string name="logout_from_facebook">Logout from Facebook</string>
    <string name="enable_serial">Enable Serial</string>
    <string name="disable_serial">Disable Serial</string>
    <string name="clear_lcd">Clear LCD</string>
    <string name="connect">Connect</string>

    <!-- Social providers id -->
    <string name="scan">Scan</string>
    <string name="tryAgain">Try Again</string>
    <string name="notConnected">Not Connected</string>
    <string name="searching">Searching......</string>
    <string name="connecting">Connecting......</string>
    <string name="selectYourDevice">Select Your Device</string>
    <string name="scanForOneSheeld">Scan For 1Sheeld</string>
    <string name="connectAutomatocallyToThisDevice">Connect Automatically to This Device</string>

    <!-- Hint text in Gmail signin dialog -->
    <string name="gmail_hint_text">\@ gmail.com</string>
    <string name="selectAll">Select All</string>
    <string name="reset">Reset</string>
    <string name="upgradeFirmata">Upgrade Firmware</string>
    <string name="appTutorial">App Tutorial</string>
    <string name="upgrad">Upgrade</string>
    <string name="loading">Loading...</string>
    <!-- text in sensors -->
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="cm">CM</string>
    <string name="ms2">m/s2</string>
    <string name="rads">rad/s</string>
    <string name="lx">light luxes</string>
    <string name="ut">uT</string>
    <string name="hpa">hPa</string>
    <string name="degree">Degree</string>
    <!-- Arduino connecting pins -->

    <string name="buzzer_tone">Press Required Tone</string>
    <string name="time_clock">Time</string>

    <!-- Condition plugin name -->
    <string name="condition_app_name">Locale Display Plug-in</string>
    <string name="condition_plugin_name">Display</string>
    <string name="list_on">On</string>
    <string name="list_off">Off</string>
    <string name="blurb_on">On</string>
    <string name="blurb_off">Off</string>

    <!-- Voice Recognition -->
    <string name="speak">Speak</string>
    <string name="tabToSpeak">Tap\nto\nSpeak</string>

    <!-- Tutorial -->
    <string name="go">Go !</string>
    <!-- Terminal -->
    <string name="terminalString">ASCII</string>
    <string name="terminalASCI">DEC</string>
    <string name="terminalBINARY">Binary</string>
    <string name="terminalHEX">Hex</string>

    <!-- Data Logger -->
    <string name="readyToLog">Ready\nFor\nLogging</string>
    <string name="stopLogging">Logging\nStopped</string>
    <string name="logging">Logging</string>

</resources>