<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/custom_action_settings"
        android:text="@string/action_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/arduino_conn_resetAll_bg"
        android:textColor="@color/textColorOnDark"/>
    <Button
        android:id="@+id/custom_open_bootloader_popup"
        android:text="@string/upgradeFirmata"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/arduino_conn_resetAll_bg"
        android:textColor="@color/textColorOnDark"/>
    <Button
        android:id="@+id/custom_appTutorial"
        android:text="@string/appTutorial"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/arduino_conn_resetAll_bg"
        android:textColor="@color/textColorOnDark"/>
    <Button
        android:id="@+id/custom_aboutDialogButton"
        android:text="@string/about"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/arduino_conn_resetAll_bg"
        android:textColor="@color/textColorOnDark"/>

</LinearLayout>