<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/start_listener_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:text="Start Sensor Listening"
        android:visibility="invisible" />

    <com.integreight.onesheeld.utils.customviews.OneSheeldTextView
        android:id="@+id/device_not_has_sensor_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_listener_bt"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/orientation_shield_screen_logo"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/sensor_x_circle"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.integreight.onesheeld.utils.customviews.OneSheeldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sensor_xcoor_top_margin"
                        android:gravity="center"
                        android:text="@string/x"
                        android:textColor="@color/offWhite"
                        android:textSize="42sp" />
                </RelativeLayout>

                <com.integreight.onesheeld.utils.customviews.OneSheeldTextView
                    android:id="@+id/x_value_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:textColor="@color/offWhite"
                    android:textSize="24sp" />

                <com.integreight.onesheeld.utils.customviews.OneSheeldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/degree"
                    android:textColor="@color/offWhite"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/sensor_y_circle"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.integreight.onesheeld.utils.customviews.OneSheeldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sensor_ycoor_top_margin"
                        android:gravity="center"
                        android:text="@string/y"
                        android:textColor="@color/offWhite"
                        android:textSize="42sp" />
                </RelativeLayout>

                <com.integreight.onesheeld.utils.customviews.OneSheeldTextView
                    android:id="@+id/y_value_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:textColor="@color/offWhite"
                    android:textSize="24sp" />

                <com.integreight.onesheeld.utils.customviews.OneSheeldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/degree"
                    android:textColor="@color/offWhite"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/sensor_z_circle"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.integreight.onesheeld.utils.customviews.OneSheeldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sensor_xcoor_top_margin"
                        android:gravity="center"
                        android:text="@string/z"
                        android:textColor="@color/offWhite"
                        android:textSize="42sp" />
                </RelativeLayout>

                <com.integreight.onesheeld.utils.customviews.OneSheeldTextView
                    android:id="@+id/z_value_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:textColor="@color/offWhite"
                    android:textSize="24sp" />

                <com.integreight.onesheeld.utils.customviews.OneSheeldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/degree"
                    android:textColor="@color/offWhite"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/stop_listener_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:text="Stop Sensor Listening"
        android:visibility="invisible" />

</RelativeLayout>